tests/broken/for-unclosed.stderr
error: This statement is never closed.
 --> tests/broken/for-unclosed.rs:4:19
  |
4 | #[oxiplate = "{%- for number in numbers -%}{{ number }} + 1 = {{ number + 1 }}"]
  |                   ^^^
